# modular_decomposition

./: .gitignore  .ocamlinit  GSProofSearch.opam  README.md  code.js  cytoscape.js  dune-project  index.html  ou3.json  out.json  out2.json  out4.json  out5.json  quartic_MD.opam  t1.json  t2.json  t5.json
.github/workflows/: lines.yml  main.yml
_build/: .db  .digest-db
css/: style.css
graphs/: ex416exp.json  ex416init.json
js/: code.js
js/dependencies/: modal.js
lib/: condense.ml  condense.mli  decomposition.ml  dune  equality.ml  equality.mli  fingerprint.ml  fingerprint.mli  graph.ml  graph.mli  graph_module.ml  graph_module.mli  id_graph.ml  id_graph.mli  parsegraph.ml  parsegraph.mli  pp_new.ml  pp_new.mli  rules.ml  rules.mli  tree.ml  tree.mli  util.ml
lib/graphLogic/: dune  equality.ml  (+5 more)
linear/: dune-project
quartic/: .gitignore  dune-project  quartic_MD.opam
quartic/lib/: condense.ml  dune  graph.ml  parsegraph.ml  parsegraph.mli  tree.ml  tree.mli  util.ml  util.mli
quartic/src/: drawing.ml  dune  main.ml  reading.ml
quartic/test/: dune  graph.json  quartic.ml  test_graph.ml  test_graph2.ml
quartic/tests/test_before/: before_trans.json  test_before.ml
quartic/tests/test_condensible/: dune  test_condensible.ml
quartic/tests/test_graph1/: dune  test_graph.ml
quartic/tests/test_graph2/: dune  test_graph2.ml
quartic/tests/test_graph3/: dune  test_graph3.ml
quartic/tests/test_tree_to_graph/: graph2.json
sample_graphs/: init.json  out.json
sample_trees/: actual.json
src/: dune  reading.ml
test/: before_graph.json  dune  test.ml
(+137 files in other folders)
